<resources>
    <string name="app_name">WearRemote</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="default_server_address" translatable="false">10.0.2.2</string>
    <string name="default_server_port" translatable="false">50051</string>
    <string name="default_scale_factor" translatable="false">3</string>
    <string name="default_message">Test message</string>

    <string name="all_remotes">All Remotes</string>
    <string name="remote_send_message">Send Message</string>
    <string name="remote_touchpad">Touchpad</string>
    <string name="remote_power">Power</string>
    <string name="remote_media">Media</string>

    <string name="action_send">Send</string>
    <string name="action_close">Close</string>

    <string name="action_power_shutdown">Shutdown</string>
    <string name="action_power_reboot">Reboot</string>
    <string name="action_power_sleep">Sleep</string>

    <string name="action_media_volume_up">Volume up</string>
    <string name="action_media_volume_down">Volume down</string>
    <string name="action_media_volume_mute">Volume mute</string>
    <string name="action_media_play_pause">Play/Pause</string>
    <string name="action_media_stop">Stop</string>
    <string name="action_media_next">Next</string>
    <string name="action_media_previous">Previous</string>

    <string name="server_address">Server address</string>
    <string name="server_port">Server port</string>

    <string name="message">Message</string>
</resources>