<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/inner_frame_layout_padding">

        <EditText
            android:id="@+id/inServerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/default_server_address" />

        <EditText
            android:id="@+id/inServerPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@string/default_server_port" />

        <Button
            android:id="@+id/btnRemoteSendMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remote_send_message" />

        <Button
            android:id="@+id/btnRemoteTouchpad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/remote_touchpad" />

    </LinearLayout>
</ScrollView>